--- a/blogpost.html
+++ b/blogpost.html
@@ -6,7 +6,7 @@
     <body>
         <div id="container">
             <div id="cabecera">
-                Hyperblog <span id="tagline"> Tu blog de confianza</span>
+                Hyperblog <span id="tagline"> Tu blog maestro</span>
             </div>
             <div id="post">
             <h1>Este es el título atractivo e interesante del post</h1>
@@ -20,6 +20,7 @@
                 Youtube. Excepto si eres un rockstar. Pero
                 estadisticamente no lo eres... por ahora. 
             </p></p>
+            <p>Suscribete y dale like</p>
             </div>
         </div>    
     </body>
